crates/osp-core/tests/compile_fail/cP3_cross_family_hint_deserialize.stderr
error[E0277]: the trait bound `CrossFamilyHint: serde::Deserialize<'de>` is not satisfied
 --> tests/compile_fail/cP3_cross_family_hint_deserialize.rs:8:34
  |
8 |     let _hint: CrossFamilyHint = serde_json::from_str("{}").unwrap();
  |                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `serde_core::de::Deserialize<'_>` is not implemented for `CrossFamilyHint`
  |
  = note: for local types consider adding `#[derive(serde::Deserialize)]` to your `CrossFamilyHint` type
  = note: for types from other crates check whether the crate offers a `serde` feature flag
  = help: the following other types implement trait `serde_core::de::Deserialize<'de>`:
            &'a Path
            &'a [u8]
            &'a str
            ()
            (T,)
            (T0, T1)
            (T0, T1, T2)
            (T0, T1, T2, T3)
          and $N others
note: required by a bound in `serde_json::from_str`
 --> $CARGO/serde_json-$VERSION/src/de.rs
  |
  | pub fn from_str<'a, T>(s: &'a str) -> Result<T>
  |        -------- required by a bound in this function
  | where
  |     T: de::Deserialize<'a>,
  |        ^^^^^^^^^^^^^^^^^^^ required by this bound in `from_str`
